# bluesky

./: .copier-answers.yml  .coveragerc  .doecode.yml  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pydevproject  .travis.yml  Blue Sky Demo.ipynb  Dockerfile  LICENSE  LICENSE_README  MANIFEST.in  README.md  azure-pipelines.yml  bluesky-docs-deploy.enc  bs.py  dev-requirements.txt  docs-requirements.txt  examples.py  github_deploy_key.enc  github_deploy_key_bluesky_bluesky_github_io.enc  make_switcher.py  mds.py  meh  multi_run_plans_example1.py  out.txt  pyproject.toml  register_mds.py  requirements-dev.txt  requirements.txt  run_tests.py  setup.cfg  setup.py  switcher.json  test-requirements.txt  test.ipynb  test_new_labels.ipynb  (+2 more)
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
bluesky/: __init__.py  _version.py  abc.py  brittle_scans.py  broker_callbacks.py  broker_examples.py  bundlers.py  callbacks.py  cntx.py  datanaming.py  epics_callbacks.py  examples.py  global_state.py  hardware_checklist.py  interactive.py  legacy_scans.py  log.py  magics.py  object_plans.py  plan_patterns.py  plan_stubs.py  plan_tools.py  plans.py  preprocessors.py  primitive_scans.py  protocols.py  qt_kicker.py  qt_tools.py  register_mdc.py  register_mds.py  run_engine.py  scans.py  scientific_callbacks.py  service_client.py  service_server.py  shortcuts.py  simple_scans.py  simulators.py  spec_api.py  standard_config.py  (+4 more)
conda-recipe/: build.sh  meta.yaml
doc/: Makefile  cannot-do-by-design.md
docs/: Makefile  _api.rst  api_changes.rst  callbacks.rst  conf.py  contributing.rst  debugging.rst  devindex.rst  documents.rst  from-pyepics-to-bluesky.rst  hardware.rst  index.rst  make.bat  metadata.rst  msg.rst  multi_run_plans.rst  otel-tracing-demo.py  otel-tracing.rst  plans.rst  progress-bar.rst  run_engine.rst  run_engine_api.rst  state-machine.rst  tiled-writer.rst  tiled.md  tiled.rst  tutorial.rst  userindex.rst  utils.rst
examples/: 2d-plotting.py  Blue Sky Demo.ipynb  adaptive_scan_demo.py  basic_mesh_plot.py  basic_raster_plot.py  bluesky state machine.ipynb  client.py  client2.py  forwarder_device.py  number_formatter.py  plotting_2d.py  raster_mesh.py  scratch.py  server.py  state_machine.py
fuzz/: README  fuzz.py
main/: .buildinfo  _api.html  api_changes.html  appendix.html  async.html  callbacks.html  comparison-with-spec.html  contributing.html  debugging.html  devindex.html  documents.html  event_descriptors.html  from-pyepics-to-bluesky.html  genindex.html  hardware-interfaces.html  hardware.html  index.html  magics.html  metadata.html  msg.html  multi_run_plans.html  objects.inv  otel-tracing.html  plans.html  progress-bar.html  py-modindex.html  run_engine.html  run_engine_api.html  search.html  searchindex.js  simulation.html  state-machine.html  tiled-writer.html  tutorial.html  userindex.html  utils.html
schemas/: begin_run_event.json  end_run_event.json  ev_desc_doc.json  ev_desc_impl.json  event.json  event_descriptor.json  run_start.json
scripts/: bluesky-0MQ-proxy  kafka-docker-compose.yml
v1.13/: .buildinfo  api_changes.html  appendix.html  async.html  callbacks.html  comparison-with-spec.html  contributing.html  debugging.html  devindex.html  documents.html  event_descriptors.html  from-pyepics-to-bluesky.html  genindex.html  hardware-interfaces.html  hardware.html  index.html  magics.html  metadata.html  msg.html  objects.inv  (+14 more)
v1.13.0a4/: .buildinfo  api_changes.html  appendix.html  async.html  callbacks.html  comparison-with-spec.html  contributing.html  debugging.html  devindex.html  documents.html  event_descriptors.html  from-pyepics-to-bluesky.html  genindex.html  hardware-interfaces.html  hardware.html  index.html  magics.html  metadata.html  msg.html  multi_run_plans.html  objects.inv  plans.html  progress-bar.html  py-modindex.html  run_engine.html  run_engine_api.html  search.html  searchindex.js  simulation.html  state-machine.html  tutorial.html  userindex.html  utils.html
v1.13.1/: .buildinfo  _api.html  api_changes.html  appendix.html  async.html  callbacks.html  comparison-with-spec.html  contributing.html  debugging.html  devindex.html  documents.html  event_descriptors.html  from-pyepics-to-bluesky.html  genindex.html  hardware-interfaces.html  hardware.html  index.html  magics.html  metadata.html  msg.html  multi_run_plans.html  objects.inv  otel-tracing.html  plans.html  progress-bar.html  py-modindex.html  run_engine.html  run_engine_api.html  search.html  searchindex.js  simulation.html  state-machine.html  tutorial.html  userindex.html  utils.html
v1.13.1rc1/: .buildinfo  api_changes.html  appendix.html  async.html  callbacks.html  comparison-with-spec.html  contributing.html  debugging.html  devindex.html  documents.html  event_descriptors.html  from-pyepics-to-bluesky.html  genindex.html  hardware-interfaces.html  hardware.html  index.html  magics.html  metadata.html  msg.html  multi_run_plans.html  objects.inv  otel-tracing.html  plans.html  progress-bar.html  py-modindex.html  run_engine.html  run_engine_api.html  search.html  searchindex.js  simulation.html  state-machine.html  tutorial.html  userindex.html  utils.html
v1.13.1rc2/: .buildinfo  _api.html  api_changes.html  appendix.html  async.html  callbacks.html  comparison-with-spec.html  contributing.html  debugging.html  devindex.html  documents.html  event_descriptors.html  from-pyepics-to-bluesky.html  genindex.html  hardware-interfaces.html  hardware.html  index.html  magics.html  metadata.html  msg.html  multi_run_plans.html  objects.inv  otel-tracing.html  plans.html  progress-bar.html  py-modindex.html  run_engine.html  run_engine_api.html  search.html  searchindex.js  simulation.html  state-machine.html  tutorial.html  userindex.html  utils.html
(+980 files in other folders)
